fixed blog post item spacing

--- a/_sass/_includes/_blog.scss
+++ b/_sass/_includes/_blog.scss
@@ -10,12 +10,12 @@
 }
 
 .blog-wrap {
-	
+
 }
 
 .blog-post {
 	position: relative;
-	padding: $grid-spacing/2;
+	//padding: $grid-spacing/2;
 	float: left;
 	width: 50%;
 }
@@ -38,14 +38,15 @@
 
 .blog-post__image {
 	width: 100%;
+	padding: $grid-spacing/2;
 }
 
 .blog-post__content {
 	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	top: $grid-spacing/2;
+	right: $grid-spacing/2;
+	bottom: $grid-spacing/2;
+	left: $grid-spacing/2;
 	display: flex;
 	align-items: center;
 	justify-content: center;
